[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s2aff"
version = "0.195"
description = "Semantic Scholar's Affiliation Extraction: Link Your Raw Affiliations to ROR IDs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
  "numpy",
  "scipy",
  "pandas>=1.3",
  "blingfire",
  "scikit-learn",
  "text_unidecode",
  "simpletransformers",
  "awscli",
  "boto3",
  "nltk",
  "camel-kenlm==2025.9.16",
  "hyperopt",
  "lightgbm==4.6.0",
  "torch",
  "pydantic",
  "pytest",
  "pytest-cov",
  "pyarrow<21",
]

[project.urls]
Homepage = "https://github.com/allenai/S2AFF"

[tool.setuptools]
packages = {find = {where = ["."]}}

[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
