[package]
name = "s2aff_rust"
version = "0.2.0"
edition = "2021"

[lib]
name = "s2aff_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
regex = "1"
once_cell = "1"
rayon = "1.8"
simd-json = { version = "0.13", features = ["serde"] }
rkyv = { version = "0.7", features = ["std"] }
memmap2 = "0.9"

